[package]
name = "log-grapher"
version = "0.1.0"
authors = ["Toqoz <toqoz@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = "0.4"
lazy_static = "1.4.0"
raqote = "0.8.0"
font-kit = "0.7"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.5.13"
getopts = "0.2"

[profile.release]
debug = true
